--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - "5173:5173"  # viteのデフォルトに合わせているのみ 変更したい場合は、vite.config.jsでserver portを指定する
     volumes:
       - ./frontend:/app  # フロントエンドのコードをマウント
-      - /app/node_modules  # 追加：これでnode_modulesはホストに上書きされない
+      - /app/node_modules  # 追加：これで空のnode_modulesはホストに上書きされない。ホストは軽く、コンテナにのみ展開。frontendで手作業でnpm installを実行しないでください。
     environment:
       - NODE_ENV=development  # 開発環境の設定
     depends_on:
